fix overflow when call admin

--- a/components/for_pages/Layout/index.module.scss
+++ b/components/for_pages/Layout/index.module.scss
@@ -1,8 +1,13 @@
 @import "styles/index";
 
-.root{
+.root {
   display: flex;
   min-width: 100%;
   position: relative;
   min-height: 100%;
+  overflow: hidden;
+}
+
+.noScroll {
+  overflow: hidden;
 }
